[package]
name = "rustorama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

askama = { version = "0.12.0" }
